# google-translate-tray

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  inject.js  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
